build/campaigns/20260423T155001Z/7.0.0/gradle-build.log
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/9.4.1/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :compileTestJava NO-SOURCE
> Task :processTestResources NO-SOURCE
> Task :testClasses UP-TO-DATE

> Task :compileJmhJava
>>> Compilation avec Eclipse Collections 7.0.0
/home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/List/ListBenchmark.java:82: error: reference to forEach is ambiguous
        fastList.forEach(blackhole::consume);
                ^
  both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in AbstractRichIterable match
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in interface Iterable
    T#2 extends Object declared in class AbstractRichIterable
/home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/List/ListBenchmark.java:87: error: reference to forEach is ambiguous
        immutableList.forEach(blackhole::consume);
                     ^
  both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in InternalIterable match
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in interface Iterable
    T#2 extends Object declared in interface InternalIterable
/home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/Set/SetBenchmark.java:70: error: reference to forEach is ambiguous
        unifiedSet.forEach(blackhole::consume);
                  ^
  both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in AbstractRichIterable match
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in interface Iterable
    T#2 extends Object declared in class AbstractRichIterable
/home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/Set/SetBenchmark.java:75: error: reference to forEach is ambiguous
        immutableSet.forEach(blackhole::consume);
                    ^
  both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in InternalIterable match
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in interface Iterable
    T#2 extends Object declared in interface InternalIterable
/home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/Bag/BagBenchmark.java:58: error: reference to forEach is ambiguous
        hashBag.forEach(blackhole::consume);
               ^
  both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in AbstractRichIterable match
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in interface Iterable
    T#2 extends Object declared in class AbstractRichIterable
/home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/Bag/BagBenchmark.java:71: error: reference to forEach is ambiguous
        immutableBag.forEach(blackhole::consume);
                    ^
  both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in InternalIterable match
  where T#1,T#2 are type-variables:
    T#1 extends Object declared in interface Iterable
    T#2 extends Object declared in interface InternalIterable
6 errors

> Task :compileJmhJava FAILED

[Incubating] Problems report is available at: file:///home/cchiaber/Test_Benchmark_JMH_EclipseCollection/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJmhJava'.
> Compilation failed; see the compiler output below.
  /home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/List/ListBenchmark.java:82: error: reference to forEach is ambiguous
          fastList.forEach(blackhole::consume);
                  ^
    both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in AbstractRichIterable match
    where T#1,T#2 are type-variables:
      T#1 extends Object declared in interface Iterable
      T#2 extends Object declared in class AbstractRichIterable
  /home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/List/ListBenchmark.java:87: error: reference to forEach is ambiguous
          immutableList.forEach(blackhole::consume);
                       ^
    both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in InternalIterable match
    where T#1,T#2 are type-variables:
      T#1 extends Object declared in interface Iterable
      T#2 extends Object declared in interface InternalIterable
  /home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/Set/SetBenchmark.java:70: error: reference to forEach is ambiguous
          unifiedSet.forEach(blackhole::consume);
                    ^
    both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in AbstractRichIterable match
    where T#1,T#2 are type-variables:
      T#1 extends Object declared in interface Iterable
      T#2 extends Object declared in class AbstractRichIterable
  /home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/Set/SetBenchmark.java:75: error: reference to forEach is ambiguous
          immutableSet.forEach(blackhole::consume);
                      ^
    both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in InternalIterable match
    where T#1,T#2 are type-variables:
      T#1 extends Object declared in interface Iterable
      T#2 extends Object declared in interface InternalIterable
  /home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/Bag/BagBenchmark.java:58: error: reference to forEach is ambiguous
          hashBag.forEach(blackhole::consume);
                 ^
    both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in AbstractRichIterable match
    where T#1,T#2 are type-variables:
      T#1 extends Object declared in interface Iterable
      T#2 extends Object declared in class AbstractRichIterable
  /home/cchiaber/Test_Benchmark_JMH_EclipseCollection/src/jmh/java/benchmark/Bag/BagBenchmark.java:71: error: reference to forEach is ambiguous
          immutableBag.forEach(blackhole::consume);
                      ^
    both method forEach(Consumer<? super T#1>) in Iterable and method forEach(Procedure<? super T#2>) in InternalIterable match
    where T#1,T#2 are type-variables:
      T#1 extends Object declared in interface Iterable
      T#2 extends Object declared in interface InternalIterable
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 11s
1 actionable task: 1 executed
